infra/securityGroup.tf
resource "aws_security_group" "alb" {
  name   = "${var.stack["api"]}-sg-alb-${var.environment["qa"]}"
  vpc_id = data.terraform_remote_state.outputs.vpc.vpc_id

  ingress {
    protocol         = "tcp"
    from_port        = 80
    to_port          = 80
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    protocol         = "tcp"
    from_port        = 443
    to_port          = 443
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.stack["api"]}-sg-alb-${var.environment["qa"]}"
    Environment = var.environment["qa"]
  }
}

resource "aws_security_group" "ecs_tasks" {
  name   = "${var.stack["api"]}-sg-task-${var.environment["qa"]}"
  vpc_id = data.terraform_remote_state.outputs.vpc.vpc_id

  ingress {
    protocol         = "tcp"
    from_port        = var.container_port
    to_port          = var.container_port
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.stack["api"]}-sg-task-${var.environment["qa"]}"
    Environment = var.environment["qa"]
  }
}
